<resources>
    <string name="app_name">MontenegroBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник по Черногории</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_city">Города</string>
    <string name="menu_beaches">Пляжи</string>
    <string name="menu_sight">Достопремичательности</string>
    <string name="menu_food">Еда</string>
    <string name="menu_price">Цены</string>
    <string name="menu_home">Жилье</string>
    <string name="button_logo_start">Старт</string>
    <string name="city_podgorica">Подгорица — главный город Черногории. Типичной европейской столицей ее не назовешь, но Подгорицу стоит посетить из-за неповторимой атмосферы. Здесь удивительным образом сочетаются свидетельства событий истории этих мест: древние храмы, руины средневековых крепостей, мечети в память о турецком господстве.Современная Подгорица — это основной транспортный узел страны, ее административный и научный центр. По сравнению с Будвой и Котором, туристов здесь немного. Но в последнее время черногорская столица становится все популярнее: гостей привлекают ее расположение в долине пяти рек, изобилие зелени и парков, а также сравнительно невысокие цены на проживание и развлечения.
    </string>
    <string name="city_tivat">Тиват — современный курортный город на берегу Бока-Которского залива на полуострове Врмац. Изначально город воспринимался исключительно как место, куда первым делом попадаешь, прибывая в страну: здесь расположен главный черногорский аэропорт. К тому же, в отличие от соседних популярных городов, в Тивате нет ничего, отмеченного ЮНЕСКО, да и вообще почти ничего старого, достопримечательного и культурно значимого (за исключением одного единственного средневекового замка в центре).
    Но мягкий климат, приятные пляжи и удобное расположение ежегодно привлекают сюда все больше туристов. Инфраструктура тут развита хорошо и с каждым годом становится все лучше. Активная жизнь кипит в гавани, число рыбных ресторанов и кафе удовлетворит даже самых ненасытных, городской парк дает тень и изобилует редкими растениями. Да и при желании можно запрыгнуть в автобус и быстро добраться, к примеру, до более знаменитого Котора. А яхтенная марина Тивата, выстроенная дельцом из Канады на месте старой верфи ВМФ, считается самой шикарной на всем Адриатическом побережье, и тем, что тут «припарковано», можно любоваться как отдельной достопримечательностью.
    </string>
    <string name="city_budva">Будва — популярный черногорский курорт, центр одноименной ривьеры. Туристов сюда влекут прозрачная вода и чистые пляжи, часть из которых периодически удостаиваются Голубого флага. Любители бурного курортного веселья найдут чем заняться — в городе много баров и дискотек с разнообразной программой и богатым коктейльным меню. Для тех, кто не представляет отдых без экскурсий и достопримечательностей, есть исторический центр с музеями и старинными постройками, а в окрестностях — христианские храмы и живописные острова. Туристов с детьми порадуют аквапарки, аттракционы и мини-зоопарк.
        Будва — далеко не самый дешевый курорт Черногории. Но если позаботиться о жилье заранее, можно успеть забронировать номер в бюджетной гостинице. В заведениях общепита же цены вполне умеренные — черногорские блюда по карману даже самым экономным туристам.
    </string>
    <string name="city_kotor">Крохотный романтичный Котор прижат горами к самой кромке узкого залива, врезающегося вглубь материка. Его мощные крепостные стены, ползущие по кручам, охватывают тугой клубок узких улочек, мощеные мраморными плитами площади размером с носовой платок, католические и православные церкви, дворцы знати, между стенами которых проглядывают ветви инжира и бугенвилий.
        Котор внесен в Список всемирного наследия ЮНЕСКО. Своим обликом город обязан венецианцам, которые владели им 400 лет. Нетронутый войнами и катаклизмами, он, кажется, так и застыл где-то в далеком прошлом. И только разноязычная толпа туристов, зонтики уличных кафе и белоснежные круизные суда в Старом порту напоминают о том, что на дворе уже 21 век.
        Взяв напрокат каноэ, яхту или моторную лодку, можно оценить с воды живописное побережье Которского залива, которое Байрон назвал самой красивой в мире встречей суши и моря.
    </string>
    <string name="city_jablyak">Крошечный черногорский городок Жабляк не может похвастать героической историей, интересными архитектурными памятниками или музеями, но тем не менее сотни тысяч туристов со всей Европы, приезжая сюда ежегодно, не устают любоваться его природными красотами и наслаждаться активным отдыхом.
        Здесь можно по-настоящему отдохнуть душой и телом, получить заряд положительных эмоций и отречься от ежедневных проблем и суеты. При этом отдых обещает быть активным и полным захватывающих приключений. Для туристов предоставляется возможность испробовать практически все виды активного отдыха на природе — вело- и пешие прогулки по горным склонам, конный спорт, горные лыжи и сноуборд, альпинизм, сплавы по горным рекам, парапланеризм и даже каньонинг
        Жабляк с населением всего в две тысячи человек довольно широко известен в Европе, так как является своего рода городом-рекордсменом. Ведь, находясь на высоте почти полторы тысячи метров над уровнем моря, он по праву считается самым высокогорным селением на всем европейском континенте. Он возведен в самом центре горного массива Дурмидор — идеального места для горнолыжного спорта.
    </string>
    <string name="beaches_mogren">
        Один из самых романтичных пляжей Будвы — это мелкогалечный, местами почти песчаный Могрен (Mogren). Приютившийся близ Старого города Будвы, неподалеку от его старинных, поросших травами и мхом стен, Могрен едва-едва не сходит в пучину морскую. Со стороны берега его «поджимают» брутальные и очень красивые слоеные скалы, в одном месте-таки вытолкнувшие побережье в морю, благодаря чему здесь официально открыто сразу два места для купания — «Могрен I» и «Могрен II». При этом пройти от одного к другому не составит труда: местные сделали проход прямо в скале, выглядит он таинственно и живописно одновременно.
        Общая протяженность этого побережья невелика — всего 340 м, поэтому в сезон здесь, буквально, яблоку негде упасть. Более популярный «Могрен I» (длиной 140 м), а вот на «Могрене II» (который чуть протяженнее — 200 м) есть шанс пробраться даже в августе, он считается более диким. Хотя и первый, и второй могут похвастать развитой инфраструктурой — есть лежаки и зонтики, душевые и кабинки для переодевания.
    </string>
    <string name="beaches_king">
        Пляж Короля — Королевский пляж близ Будвы — престижное место курортного отдыха, находится на берегу небольшой лагуны в районе Милочера.
        Как и протяженный платный пляж Милочера, более скромный по своим размерам 200-метровый Королевский пляж Будвы ранее входил в территорию собственного курорта королевской династии Карагеоргиевичей.
        Элитный статус оба пляжа не утратили и сегодня: на благоустроенных участках отдыхают черногорские политики, в это время доступ к берегу может быть ограничен. В остальные дни необходимо оплачивать вход: от 100 евро (в разгар сезона — до 130 евро) и парковку. В стоимость входит аренда лежаков.
        Море у побережья чистое, берег привлекает своей уединенностью, которая во многом объясняется высокой платой за вход, и живописными пейзажами. Береговую линию обрамляют оливковые деревья и кипарисы.
        Добраться до Королевского пляжа можно пешком от Милочера, Святого Стефана. Транспорт из Будвы — местные и экскурсионные автобусы, отправляющиеся к Святому Стефану.
    </string>
        <string name="trifon_church">
            Собор Св. Трифона в Которе освящен в 12 веке, хотя еще в 809 г. на этом месте уже стояла церковь, построенная богатым семейством Сарацинисов для выкупленных в Константинополе мощей Трипуна Фригийского, с тех пор он и считается покровителем города. За прошедшее время храм пережил землетрясения и войны, бесчисленные перестройки и реставрации, поэтому от первоначального облика почти ничего не осталось. Сегодня он принадлежит католической церкви, здесь идет полный круг служения, открыт доступ туристам.
        </string>
    <string name="sveti_stefan">

    </string>
    <string name="sight_perast">
        Узкий пролив соединяет Которскую бухту и Адриатическое море. Носит он название Вериге (верига — цепь), поскольку в давние времена и на самом деле перегораживался цепями, запирая проход к городам Рисан и Котор. Ровно напротив этого пролива находится город Пераст, он и был древним хранителем входа в бухту. Да, собственно, и вся жизнь этого города связана с мореплаванием и судостроением. Он дал миру целую плеяду выдающихся мореплавателей, среди которых адмирал балтийского флота Матиас Змаевич, который помогал Петру Великому создать этот самый Балтийский флот и был одним из близких друзей царя. Памятник Змаевичу стоит на центральной площади Пераста, которая носит название Площади Адмиралов, что вполне логично для города, вся жизнь которого связана с морем.
        В Перасте располагалась и знаменитая морская школа Марко Мартиновича. В нее Петр Великий присылал на учебу своих гардемаринов. Позже Марко Маркович стал одним из самых выдающихся преподавателей Морской Академии в Венеции. Причастность же к мореходному делу стала причиной небывалого расцвета города в 17-18 столетиях.
        Город маленький, а флотом располагал огромным, более 100 парусных судов. Флот принимал участие во многих известных сражениях, а его моряки славились виртуозным владением своей профессией. В эту эпоху город стал необычайно красивым, сложился его архитектурный облик, были возведены прекрасные дворцы, хозяевами которых были, в основном, капитаны флота. Немалые деньги вкладывались в строительство соборов и монастырей. В 17 веке была пристроена колокольня к церкви Святого Николы, выстроенной гораздо раньше, в 15 веке. Колокольня не только украсила город, но и стала его гордостью: высотой она превосходила все сооружения в Боко-Которской бухте, а звон ее колоколов доносился до Герцег-Нови.
        В наши дни желающие могут подняться на колокольню и убедиться в том, что побережье бухты необычайно красиво.
        Была затеяна глобальная перестройка церкви, но существование Венецианской республики прекратилось, прекратилось и финансирование, церковь Святого Николы так и осталась недоперестроенной. Интерес представляют также церкви Богоматери на Рифе, приходская, Святого Георгия. Все они являются яркими штрихами в облике города.\n
        Особенность местного ландшафта такова, что город больше не растет: скалы подступают почти к самой воде, место есть всего для 3-4 улиц, которые построены уже давно. Зато территоррией города также считаются являются два острова. Остров Госпа от Шкрпьела — искусственный, создан насыпкой камней. Издавна из уст в уста передается легенда о том, что на острове была найдена икона Богородицы. В честь нее на острове построена церковь, а каждый год, 22 июля, отмечается своеобразный праздник: жители окрестных селений на лодках привозят к острову новые камни для укрепления его. Праздник очень живописен, многие туристы приурочивают свой отдых именно к его дате.
        Остров Святой Георгий знаменит бенедектинским аббатством, расположенным здесь издавна. Попасть на оба острова можно чартер-ботом, с экскурсией, или договорившись о лодке с местными жителями.
    </string>
</resources>